examples/test/testpolicy12387.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12387
  namespace: namespace36
spec:
  podSelector:
    matchLabels:
      key41: value16
      key17: value22
      key15: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value34
          key30: value19
      podSelector:
        matchLabels:
          key14: value20
